settate le gagine di login e logout con ejs

--- a/plugins/simpleAccess/webPages/logout.ejs
+++ b/plugins/simpleAccess/webPages/logout.ejs
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <%- bootstrapCss %>
 </head>
 <body>
-    Pagina di login 
+    pagina di logout
+
+    <%- bootstrapJs %>
 </body>
 </html>
