--- a/plugins/simpleAccess/webPages/login.ejs
+++ b/plugins/simpleAccess/webPages/login.ejs
@@ -59,7 +59,7 @@
           .then(response => response.json())
           .then(result => {
             console.log('Successo:', result);
-            window.location.replace('/logged');// redirect
+            //window.location.replace('/logged');// redirect non funziona 
             // Qui puoi gestire la risposta, ad esempio reindirizzare l'utente o mostrare un messaggio
           })
           .catch(error => {
