--- a/plugins/simpleAccess/webPages/login.ejs
+++ b/plugins/simpleAccess/webPages/login.ejs
@@ -16,7 +16,24 @@
             <div class="card">
               <div class="card-body">
                 <h3 class="card-title text-center mb-6 xl-4">Login</h3>
-                <form id="loginForm">
+
+                <!-- Messaggio di errore nascosto inizialmente -->
+                <div id="errorDiv" class="mb-3 d-none">
+                  <label class="form-label text-danger">Credenziali non valide</label>
+                </div>
+
+                  <!-- Script lato client per gestire il messaggio di errore -->
+                <script>
+                  document.addEventListener("DOMContentLoaded", function() {
+                    const params = new URLSearchParams(window.location.search);
+                    if (params.has('error')) {
+                      // Se il parametro error è presente, rendi visibile il messaggio d'errore
+                      document.getElementById('errorDiv').classList.remove('d-none');
+                    }
+                  });
+                </script>
+
+                <form id="loginForm" method="POST">
                   <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
                     <input type="text" class="form-control" id="username" name="username" required>
@@ -25,7 +42,7 @@
                     <label for="password" class="form-label">Password</label>
                     <input type="password" class="form-control" id="password" name="password" required>
                   </div>
-                  <button type="button"  id="loginButton" class="btn btn-primary w-100">Accedi</button>
+                  <button type="submit"  id="loginButton" class="btn btn-primary w-100">Accedi</button>
                 </form>
               </div>
             </div>
@@ -34,7 +51,7 @@
       </div>
 
       <script>
-       
+      /*  
            // Funzione che esegue la chiamata POST
         function loginUser() {
           // Recupera i valori inseriti
@@ -67,8 +84,8 @@
             // Gestione errori
           });
         }
-
-        // Attiva la funzione al click sul bottone
+ */
+/*         // Attiva la funzione al click sul bottone
       document.getElementById('loginButton').addEventListener('click', loginUser);
 
       // Attiva la funzione alla pressione del tasto Invio all'interno del form
@@ -77,7 +94,7 @@
           e.preventDefault();  // Previene il comportamento di default del form
           loginUser();
         }
-      });
+      }); */
 
       </script>
 
