--- a/core/admin/webPages/index.ejs
+++ b/core/admin/webPages/index.ejs
@@ -1,6 +1,46 @@
-<%- include( passData.themeSys.getThemePartPath( 'head.ejs' ) ) %>
-<%- include( passData.themeSys.getThemePartPath( 'header.ejs' ) ) %>
+<!-- ATTENZIONE  nelle pagine di admin sarà chiamata la funzone getAdminThemePartPath() e non la funzione getThemePartPath() -->
+<%- include( passData.themeSys.getAdminThemePartPath( 'head.ejs' ) ) %>
+<%- include( passData.themeSys.getAdminThemePartPath( 'header.ejs' ) ) %>
 
-<h1>pagina di admin ed adessio vediamo come fare</h1>
+<!-- api prefix -->
+<span id="apiPrefix" style="display: none;"><%- passData.apiPrefix %></span>
+<script>
+    const apiPrefix = document.getElementById('apiPrefix').innerText;
+</script>
 
-<%- include( passData.themeSys.getThemePartPath( 'footer.ejs' ) ) %>
+<!-- adminPrefix -->
+<span id="adminPrefix" style="display: none;"><%- passData.adminPrefix %></span>
+<script>
+    const adminPrefix = document.getElementById('adminPrefix').innerText;
+</script>
+
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="list-group">
+                <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
+                    Gestione Admin
+                </a>
+                <a href="userManagment.ejs" class="list-group-item list-group-item-action">Gestione Utenti</a>
+                <a href="#" class="list-group-item list-group-item-action">Creazione Pagine Web</a>
+                <a href="#" class="list-group-item list-group-item-action">Gestione File</a>
+                <a href="#" class="list-group-item list-group-item-action">Impostazioni Sistema</a>
+                <a href="#" class="list-group-item list-group-item-action">Gestione Plugin</a>
+                <a href="#" class="list-group-item list-group-item-action">Gestione Temi</a>
+            </div>
+        </div>
+        <div class="col-md-9">
+            <div class="card">
+                <div class="card-header">
+                    Benvenuto nella gestione di Italo8CMS
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Seleziona un'opzione dal menu</h5>
+                    <p class="card-text">Utilizza il menu a sinistra per navigare tra le opzioni di gestione.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<%- include( passData.themeSys.getAdminThemePartPath( 'footer.ejs' ) ) %>
