--- a/core/admin/webPages/userManagment/index.ejs
+++ b/core/admin/webPages/userManagment/index.ejs
@@ -90,7 +90,7 @@
                         <p><strong>Role:</strong> ${roleName}</p>
                         <div class="text-start">
                             <a href="/${adminPrefix}/userManagment/userView.ejs?username=${user.username}" class="btn btn-info btn-sm me-2">Visualizza</a>
-                            <a href="/${adminPrefix}/userManagment/userEdit.ejs?username=${user.username}" class="btn btn-warning btn-sm me-2">Modifica</a>
+                            <a href="/${adminPrefix}/userManagment/userUpsert.ejs?username=${user.username}" class="btn btn-warning btn-sm me-2">Modifica</a>
                             <a href="/${adminPrefix}/userManagment/userDelete.ejs?username=${user.username}" class="btn btn-danger btn-sm">Elimina</a>
                         </div>
                     `;
@@ -116,7 +116,7 @@
         <i class="bi bi-plus"></i> Crea Utente
     </button> -->
 
-    <a href="/<%- passData.adminPrefix %>/userManagment/userAdd.ejs" class="btn btn-primary">Crea nuovo Utente</a>
+    <a href="/<%- passData.adminPrefix %>/userManagment/userUpsert.ejs" class="btn btn-primary">Crea nuovo Utente</a>
 
 <!--     <form id="createUserForm" class="mt-3" style="display: none;">
         <div class="mb-3">
