eliminate tutte le tracce del vecchio refactori di simpleAccess ora adminUsers

--- a/themes/default/pluginsEndpointsMarkup/adminUsers/login/template.ejs
+++ b/themes/default/pluginsEndpointsMarkup/adminUsers/login/template.ejs
@@ -1,5 +1,5 @@
 <%#
-  Template personalizzato per la pagina di login del plugin simpleAccess
+  Template personalizzato per la pagina di login del plugin adminUsers
   Questo template sovrascrive quello di default quando presente nel tema
 
   Variabili disponibili:
