--- a/themes/default/pluginsEndpointsMarkup/adminUsers/logout/style.css
+++ b/themes/default/pluginsEndpointsMarkup/adminUsers/logout/style.css
@@ -1,7 +1,7 @@
 /*
   CSS personalizzato per la pagina di logout
   Tema: default
-  Plugin: simpleAccess
+  Plugin: adminUsers
   Endpoint: logout
 */
 
