--- a/themes/default/pluginsEndpointsMarkup/adminUsers/logout/template.ejs
+++ b/themes/default/pluginsEndpointsMarkup/adminUsers/logout/template.ejs
@@ -1,5 +1,5 @@
 <%#
-  Template personalizzato per la pagina di logout del plugin simpleAccess
+  Template personalizzato per la pagina di logout del plugin adminUsers
 %>
 <!DOCTYPE html>
 <html lang="it">
