--- a/themes/exampleTheme/pluginsEndpointsMarkup/adminUsers/login/style.css
+++ b/themes/exampleTheme/pluginsEndpointsMarkup/adminUsers/login/style.css
@@ -1,6 +1,6 @@
 /*
 ================================================================================
-CSS PERSONALIZZATO - Login di simpleAccess per exampleTheme
+CSS PERSONALIZZATO - Login di adminUsers per exampleTheme
 ================================================================================
 Questo CSS viene passato al template come variabile "customCss" e incluso
 inline nella pagina.
