--- a/themes/exampleTheme/pluginsEndpointsMarkup/adminUsers/login/template.ejs
+++ b/themes/exampleTheme/pluginsEndpointsMarkup/adminUsers/login/template.ejs
@@ -1,8 +1,8 @@
 <%#
 ================================================================================
-TEMPLATE PERSONALIZZATO - Login di simpleAccess
+TEMPLATE PERSONALIZZATO - Login di adminUsers
 ================================================================================
-Questo template sovrascrive la pagina di login di default del plugin simpleAccess.
+Questo template sovrascrive la pagina di login di default del plugin adminUsers.
 Il sistema dei temi controlla automaticamente questa cartella prima di usare
 il template di default del plugin.
 
