--- a/themes/exampleTheme/templates/page.template.ejs
+++ b/themes/exampleTheme/templates/page.template.ejs
@@ -46,7 +46,7 @@ Inserisci qui il contenuto specifico di questa pagina
             <% } else { %>
                 <div class="alert alert-warning">
                     Non sei autenticato.
-                    <a href="/<%= passData.apiPrefix %>/simpleAccess/login">Accedi</a>
+                    <a href="/<%= passData.apiPrefix %>/adminUsers/login">Accedi</a>
                 </div>
             <% } %>
         </div>
