--- a/themes/exampleTheme/views/header.ejs
+++ b/themes/exampleTheme/views/header.ejs
@@ -18,7 +18,7 @@ NOTA: header.ejs NON chiude il tag <body>, quello è compito di footer.ejs
     Usato per:
     - Banner promozionali
     - Notifiche di sistema
-    - Box di stato login (come fa simpleAccess con useLoginStatusBox)
+    - Box di stato login (come fa adminUsers con useLoginStatusBox)
     ============================================================================
     -->
     <%- passData.pluginSys.hookPage("header", passData); %>
