--- a/themes/default/pluginsEndpointsMarkup/adminUsers/login/style.css
+++ b/themes/default/pluginsEndpointsMarkup/adminUsers/login/style.css
@@ -1,7 +1,7 @@
 /*
   CSS personalizzato per la pagina di login
   Tema: default
-  Plugin: simpleAccess
+  Plugin: adminUsers
   Endpoint: login
 */
 
